dashboard all set

--- a/recycling/templates/recycling/dashboard.html
+++ b/recycling/templates/recycling/dashboard.html
@@ -123,8 +123,7 @@
             <li class="relative px-6 py-3">
               <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-                href="forms.html"
-              >
+                href="#make_request">
                 <svg
                   class="w-5 h-5"
                   aria-hidden="true"
@@ -729,7 +728,7 @@
             </div>
 
             <!-- Charts -->
-            <h2
+            <h2 id="make_request"
               class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200"
             >
               Request
