--- a/recycling/templates/recycling/index.html
+++ b/recycling/templates/recycling/index.html
@@ -107,12 +107,9 @@
                                     <br>
                                    Nylons with us.
                                  </h1>
-                                 <p>
-                                 You get redeemable coin when you turn in your responsibly used plasctic and nylon with us
-                                 </p>
                                  <div class="btn-box">
-                                    <a href="" class="btn1">
-                                    recycle with us
+                                    <a href="{% url "register" %}" class="btn1">
+                                    start recycling now 
                                     </a>
                                  </div>
                               </div>
@@ -132,12 +129,9 @@
                                     <br>
                                     Plastic with us
                                  </h1>
-                                 <p>
-                                 You get redeemable coin when you turn in your responsibly used plasctic and nylon with us
-                                 </p>
                                  <div class="btn-box">
-                                    <a href="" class="btn1">
-                                    recycle with us
+                                    <a href="{% url "register" %}" class="btn1">
+                                    start recycling now 
                                     </a>
                                  </div>
                               </div>
@@ -157,12 +151,10 @@
                                     <br>
                                     bottles with us.
                                  </h1>
-                                 <p>
-                                    You get redeemable coin when you turn in your responsibly used plasctic and nylon with us
-                                 </p>
+                                
                                  <div class="btn-box">
-                                    <a href="" class="btn1">
-                                    recycle with us
+                                    <a href="{% url "register" %}" class="btn1">
+                                    start recycling now 
                                     </a>
                                  </div>
                               </div>
@@ -191,7 +183,7 @@
                </h2>
             </div>
             <div class="row">
-               <div class="col-md-4">
+               <div class="col-md-3">
                   <div class="box ">
                      <div class="img-box">
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -282,15 +274,15 @@
                      </div>
                      <div class="detail-box">
                         <h5>
-                           Save up for school fee
+                           Trash-for-school
                         </h5>
                         <p>
-                            Earn your point by recycling with us and save up for school fees
+                            Save up your plastic earnings for school fees & educational needs 
                         </p>
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-3">
                   <div class="box ">
                      <div class="img-box">
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 490.667 490.667" style="enable-background:new 0 0 490.667 490.667;" xml:space="preserve">
@@ -397,15 +389,15 @@
                      </div>
                      <div class="detail-box">
                         <h5>
-                           Free Airtime
+                           Trash-for-health
                         </h5>
                         <p>
-                           Earn your point by donaiting and convert it to airtime/data subscriptions
+                           Save up your plastic earnings for basic healthcare needs
                         </p>
                      </div>
                   </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-3">
                   <div class="box ">
                      <div class="img-box">
                         <svg id="_30_Premium" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" data-name="30_Premium">
@@ -418,10 +410,31 @@
                      </div>
                      <div class="detail-box">
                         <h5>
-                           EcoBaams fashion
+                          Trash-to-Earn
                         </h5>
                         <p>
-                           you can transact your earned point to EcoBaams fashion products
+                           Get your bank account credited with your plastic earnings on pay-days.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-3">
+                  <div class="box ">
+                     <div class="img-box">
+                        <svg id="_30_Premium" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" data-name="30_Premium">
+                           <g id="filled">
+                              <path d="m252.92 300h3.08a124.245 124.245 0 1 0 -4.49-.09c.075.009.15.023.226.03.394.039.789.06 1.184.06zm-96.92-124a100 100 0 1 1 100 100 100.113 100.113 0 0 1 -100-100z" />
+                              <path d="m447.445 387.635-80.4-80.4a171.682 171.682 0 0 0 60.955-131.235c0-94.841-77.159-172-172-172s-172 77.159-172 172c0 73.747 46.657 136.794 112 161.2v158.8c-.3 9.289 11.094 15.384 18.656 9.984l41.344-27.562 41.344 27.562c7.574 5.4 18.949-.7 18.656-9.984v-70.109l46.6 46.594c6.395 6.789 18.712 3.025 20.253-6.132l9.74-48.724 48.725-9.742c9.163-1.531 12.904-13.893 6.127-20.252zm-339.445-211.635c0-81.607 66.393-148 148-148s148 66.393 148 148-66.393 148-148 148-148-66.393-148-148zm154.656 278.016a12 12 0 0 0 -13.312 0l-29.344 19.562v-129.378a172.338 172.338 0 0 0 72 0v129.38zm117.381-58.353a12 12 0 0 0 -9.415 9.415l-6.913 34.58-47.709-47.709v-54.749a171.469 171.469 0 0 0 31.467-15.6l67.151 67.152z" />
+                              <path d="m287.62 236.985c8.349 4.694 19.251-3.212 17.367-12.618l-5.841-35.145 25.384-25c7.049-6.5 2.89-19.3-6.634-20.415l-35.23-5.306-15.933-31.867c-4.009-8.713-17.457-8.711-21.466 0l-15.933 31.866-35.23 5.306c-9.526 1.119-13.681 13.911-6.634 20.415l25.384 25-5.841 35.145c-1.879 9.406 9 17.31 17.367 12.618l31.62-16.414zm-53-32.359 2.928-17.615a12 12 0 0 0 -3.417-10.516l-12.721-12.531 17.658-2.66a12 12 0 0 0 8.947-6.5l7.985-15.971 7.985 15.972a12 12 0 0 0 8.947 6.5l17.658 2.66-12.723 12.535a12 12 0 0 0 -3.417 10.516l2.928 17.615-15.849-8.231a12 12 0 0 0 -11.058 0z" />
+                           </g>
+                        </svg>
+                     </div>
+                     <div class="detail-box">
+                        <h5>
+                          Trash-for-Fashion
+                        </h5>
+                        <p>
+                           Transact your plastic earning with our eco fashion products( eco bags and accessories)
                         </p>
                      </div>
                   </div>
@@ -514,7 +527,7 @@
          <div class="container">
             <div class="heading_container heading_center">
                <h2>
-                 Waste collection <span>Programs</span>
+                 Our collection <span>Programs</span>
                </h2>
             </div>
             <div class="row">
@@ -535,7 +548,7 @@
                      </div>
                      <div class="detail-box">
                         <p>
-                          Request pickup via our website and we will pickup from your doorstep on scheduled days free of charge
+                          Request pick up via our website/chat with us and we will pickup your wastes from your doorstep on scheduled days.
                         </p>
                      </div>
                   </div>
@@ -550,14 +563,14 @@
                         </div>
                      </div>
                      <h5>
-                        community Waste bin
+                        Drop-off station
                         </h5>
                      <div class="img-box">
                         <img src="{% static "recycling/images/p9.png" %}" alt="">
                      </div>
                      <div class="detail-box">
                         <p>
-                          Locate the nearest community bin to drop off your recyclable wastes and earn points all the same
+                          Turn-in your plastic wastes with our collector agent nearest to your community/school
                         </p>
                      </div>
                   </div>
@@ -602,9 +615,8 @@
                   <div class="col-md-6 offset-md-3">
                      <div class="subscribe_form ">
                         <div class="heading_container heading_center">
-                           <h3>Subscribe To Get Offers</h3>
+                           <h3>Subscribe to get updates and opportunities for you</h3>
                         </div>
-                        <p>At Ecobaams Africa, we promote environmental sustainability and community health</p>
                         <form action="">
                            <input type="email" placeholder="Enter your email">
                            <a href="{% url "login" %}">
@@ -617,13 +629,18 @@
             </div>
          </div>
       </section>
+      <section class="subscribe_section">
+         <div class="container-fuild">
+            <img src="{% static "recycling/images/map.png" %}" width="100%" style='height: 600px'/>
+         </div>
+      </section>
       <!-- end subscribe section -->
       <!-- client section -->
       <section class="client_section layout_padding">
          <div class="container">
             <div class="heading_container heading_center">
                <h2>
-                  Customer's Testimonial
+                   Our community 
                </h2>
             </div>
             <div id="carouselExample3Controls" class="carousel slide" data-ride="carousel">
@@ -639,13 +656,13 @@
                         </div>
                         <div class="detail-box">
                            <h5>
-                              Anna Trevor
+                              Mrs Ademola
                            </h5>
                            <h6>
                               Customer
                            </h6>
                            <p>
-                              Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit, et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus accusantium sapiente nam! Quaerat.
+                               Ecobaams has made recycling easy, now I even earn stipends from my wastes 
                            </p>
                         </div>
                      </div>
