changing steps design

--- a/recycling/templates/recycling/index.html
+++ b/recycling/templates/recycling/index.html
@@ -631,7 +631,7 @@
       </section>
       <section class="subscribe_section">
          <div class="container-fuild">
-            <img src="{% static "recycling/images/map.png" %}" width="100%" style='height: 600px'/>
+            <img src="{% static "recycling/images/steps.png" %}" width="100%" style='height: 600px'/>
          </div>
       </section>
       <!-- end subscribe section -->
