fixing request page

--- a/recycling/static/recycling/css/style.css
+++ b/recycling/static/recycling/css/style.css
@@ -33,7 +33,9 @@ body {
 .layout_padding-bottom {
   padding-bottom: 90px;
 }
-
+/* .f{
+  margin-top: ;
+} */
 h1,
 h2 {
   font-family: 'Playfair Display', serif;
@@ -1120,7 +1122,7 @@ form input[type="submit"]:focus {
     font-weight: 400;
 }
 
-http://kute-themes.com/html/boutique/html/index.html
+/* http://kute-themes.com/html/boutique/html/index.html
 https://template.hasthemes.com/noraure/noraure/index.html
 https://preview.hasthemes.com/xoss-preview/xoss/index.html
-
+ */
