--- a/recycling/templates/recycling/request.html
+++ b/recycling/templates/recycling/request.html
@@ -28,33 +28,237 @@
     <style>
       #id_trash_types
       {
-        with: 100;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        height: 10rem;
+        width: 100%;
+        height: 5rem;
+        border-radius: 3px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+        margin-bottom: 20px;
       }
-       #id_trash_types > div
-       {
-        width: 30%;
-        height: 70%;
-        border-radius: 3px;
-        background-color: white;
-        box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
-       }
-       #req-sub
-       {
-        width: 12rem;
-        heigth: 3rem;
-        background-color: green;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        color: white;
-        border-radius: 3px;
-       }
-    </style>
-  </head>
+#id_trash_types > div > label {
+  font-size: 14px;  /* Adjust font size as needed */
+  position: relative;
+  display: flex;  /* Flexbox for alignment */
+  align-items: center;
+  width: auto;
+  gap: 10px;  /* Adds space between text and slider */
+}
+
+/* Hide default HTML checkbox */
+#id_trash_types > div > label input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+  background: black;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 2em;
+  width: 2em;
+  left: 0;
+  top: 0;
+  background-color: white;
+  border-radius: 50px;
+  {% comment %} box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); {% endcomment %}
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+/* Input checked styles */
+#id_trash_types > div > label input:checked + .slider {
+  background: lime;
+}
+
+
+#id_trash_types > div > label input:checked + .slider:before {
+  transform: translateX(1.6em);
+}
+label[for="id_trash_type"] {
+ opacity: 0;
+}
+/* From Uiverse.io by Galahhad */ 
+/* checkbox settings 👇 */
+
+.comLeb {
+  --primary-color: #1677ff;
+  --secondary-color: #fff;
+  --primary-hover-color: #4096ff;
+  /* checkbox */
+  --checkbox-diameter: 20px;
+  --checkbox-border-radius: 5px;
+  --checkbox-border-color: #d9d9d9;
+  --checkbox-border-width: 1px;
+  --checkbox-border-style: solid;
+  /* checkmark */
+  --checkmark-size: 1.2;
+}
+
+.comLeb, 
+.comLeb *, 
+.comLeb *::before, 
+.comLeb *::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.comLeb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: var(--checkbox-diameter);
+  height: var(--checkbox-diameter);
+  border-radius: var(--checkbox-border-radius);
+  background: var(--secondary-color);
+  border: var(--checkbox-border-width) var(--checkbox-border-style) var(--checkbox-border-color);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+  position: relative;
+}
+
+.comLeb::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+  box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+  border-radius: inherit;
+  opacity: 0;
+  -webkit-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+  -o-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+  transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+}
+
+.comLeb::before {
+  top: 40%;
+  left: 50%;
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 7px;
+  border-right: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  -ms-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  opacity: 0;
+  -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
+  -o-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
+  transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
+}
+
+/* actions */
+
+.comLeb:hover {
+  border-color: var(--primary-color);
+}
+
+.comLeb:checked {
+  background: var(--primary-color);
+  border-color: transparent;
+}
+
+.comLeb:checked::before {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+  -ms-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+  transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+  -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  -o-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+}
+
+.comLeb:active:not(:checked)::after {
+  -webkit-transition: none;
+  -o-transition: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  transition: none;
+  opacity: 1;
+}  
+/* Style the last two <li> elements */
+#trash_form p:nth-last-child(2),
+#trash_form p:nth-last-child(3) {
+  margin: 20px;
+  
+}
+select {
+   -webkit-appearance:none;
+   -moz-appearance:none;
+   -ms-appearance:none;
+   appearance:none;
+   outline:0;
+   box-shadow:none;
+   border:0!important;
+   background: #5c6664;
+   background-image: none;
+   flex: 1;
+   padding: 0 .5em;
+   color:#fff;
+   cursor:pointer;
+   font-size: 1em;
+   font-family: 'Open Sans', sans-serif;
+}
+select::-ms-expand {
+   display: none;
+}
+#fund_form p:nth-last-child(4) {
+   position: relative;
+   display: flex;
+   width: 20em;
+   height: 3em;
+   line-height: 3;
+   background: #5c6664;
+   overflow: hidden;
+   border-radius: .25em;
+}
+#fund_form p:nth-last-child(4)::after {
+   content: '\25BC';
+   position: absolute;
+   top: 0;
+   right: 0;
+   padding: 0 1em;
+   background: #2b2e2e;
+   cursor:pointer;
+   pointer-events:none;
+   transition:.25s all ease;
+}
+#fund_form p:nth-last-child(4):hover::after {
+   color: #23b499;
+}
+#fund_form p:nth-last-child(4) > label
+{
+  display: none;
+}
+#fund_form
+{
+  display: flex;
+  align-items: start;
+  justify-content: space-evenly;
+  flex-direction: column;
+  height: 20rem;
+}
+</style>
+    </head>
   <body>
     <script>
         function getCookie(name) {
@@ -648,13 +852,13 @@
                   <p
                     class="text-lg font-semibold text-gray-700 dark:text-gray-200"
                   >
-                    # {{ fund }}
+                    <svg id="Layer_1" class="text-lg w-10 h-10 font-semibold text-gray-700 dark:text-gray-200" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.09 122.88"><title>nigeria-naira</title><path d="M13.42,0H32.1a1.25,1.25,0,0,1,1,.6L58,42.26H83.17v-41A1.23,1.23,0,0,1,84.39,0h17.28a1.23,1.23,0,0,1,1.23,1.23v41h11a1.23,1.23,0,0,1,1.23,1.23V54.55a1.23,1.23,0,0,1-1.23,1.23h-11v9.41h11a1.23,1.23,0,0,1,1.23,1.22V77.48a1.23,1.23,0,0,1-1.23,1.22h-11v43a1.23,1.23,0,0,1-1.23,1.23H84.39a1.25,1.25,0,0,1-1-.6L58,78.7H33.26v43A1.23,1.23,0,0,1,32,122.88H13.42a1.23,1.23,0,0,1-1.23-1.23V78.7h-11A1.23,1.23,0,0,1,0,77.48V66.41a1.23,1.23,0,0,1,1.23-1.22h11V55.78h-11A1.23,1.23,0,0,1,0,54.55V43.49a1.23,1.23,0,0,1,1.23-1.23h11v-41A1.23,1.23,0,0,1,13.42,0ZM33.26,55.78v9.41h17l-4.4-9.41ZM70,65.19H83.17V55.78H65.68L70,65.19ZM83.17,78.7H77.88l5.29,11v-11ZM33.26,32.76v9.5h4.57l-4.57-9.5Z"/></svg> {{ fund }}
                   </p>
                 </div>
               </div>
             </div>
                         <!-- Charts -->
-            <h2 id="make_request"
+            {% comment %} <h2 id="make_request"
               class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200"
             >
               Request
@@ -668,7 +872,40 @@
                     <button id="req-sub" type="submit">Send</button>
                 </form>
 
-            </div>
+            </div> {% endcomment %}
+
+            <h4
+              class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300"
+            >
+              Make Request
+            </h4>
+            <div class="grid gap-6 mb-8 md:grid-cols-2">
+              <div
+                class="min-w-0 p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800"
+              >
+                <h4 class="mb-4 font-semibold text-gray-600 dark:text-gray-300">
+                  Waste Request
+                </h4>
+                 <form method="POST" action="{% url 'request' %}" id="trash_form">
+                    {% csrf_token %}
+                    {{ trash_form.as_p }}
+                    <button type="submit" name="submit_trash_request" class="rounded-lg bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300">Submit Trash Request</button>
+                </form>
+              </div>
+              <div
+                class="min-w-0 p-4 bg-white  rounded-lg shadow-xs"
+              >
+                <h4 class="mb-4 font-semibold">
+                  Request Withdraw
+                </h4>
+                <p>
+                   <form method="POST" action="{% url 'request' %}" id="fund_form">
+                    {% csrf_token %}
+                    {{ fund_form.as_p }}
+                    <button type="submit" name="submit_fund_request" class="rounded-lg bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300">Submit Fund Request</button>
+                </form>
+                </p>
+              </div>
             <br>
           </div>
         </main>
@@ -694,10 +931,26 @@ trashTypesCheckboxes.forEach(checkbox => {
     });
 });
 
-// Add event listener to submit button
-submitButton.addEventListener("click", () => {
-    // Show the trash type input before submitting
-    trashTypeInput.style.display = "block";
+// Select all label elements inside the #id_trash_types div
+var labels = document.querySelectorAll('#id_trash_types > div > label');
+
+// Loop over the labels and add a span to the first three
+for (var i = 0; i < 3; i++) {
+    var span = document.createElement('span');
+    span.className = 'slider'
+    // Append the span to each label
+    labels[i].appendChild(span);
+}
+
+const labels2 = document.querySelectorAll('label');
+
+// Apply the same class to labels with specific 'for' attribute values
+labels2.forEach(label => {
+  const forValue = label.getAttribute('for');
+  if (forValue === 'id_pickup' || forValue === 'id_DropOff') {
+    label.classList.add('comLeb');  // Add the same class for both labels
+  }
 });
+
   </script>
 </html>
