--- a/recycling/templates/recycling/dashboard.html
+++ b/recycling/templates/recycling/dashboard.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html :class="{ 'theme-dark': dark }" x-data="data()" lang="en">
   <head>
@@ -55,7 +56,7 @@
        }
     </style>
   </head>
-  <body>
+  <body class="relative">
     <script>
         function getCookie(name) {
             var cookieValue = null;
@@ -76,6 +77,49 @@
             const token = getCookie("csrftoken");
 
     </script>
+      {% if messages %}
+        {% for message in messages %}
+            <div
+                role="alert"
+                class="p-2 rounded-lg w-20 flex items-center transition duration-300 ease-in-out transform hover:scale-105
+                {% if message.tags == 'success' %}
+                    bg-green-100 dark:bg-green-900 border-l-4 border-green-500 dark:border-green-700 text-green-900 dark:text-green-100 hover:bg-green-200 dark:hover:bg-green-800
+                {% elif message.tags == 'info' %}
+                    bg-blue-100 dark:bg-blue-900 border-l-4 border-blue-500 dark:border-blue-700 text-blue-900 dark:text-blue-100 hover:bg-blue-200 dark:hover:bg-blue-800
+                {% elif message.tags == 'warning' %}
+                    bg-yellow-100 dark:bg-yellow-900 border-l-4 border-yellow-500 dark:border-yellow-700 text-yellow-900 dark:text-yellow-100 hover:bg-yellow-200 dark:hover:bg-yellow-800
+                {% elif message.tags == 'error' %}
+                    bg-red-100 dark:bg-red-900 border-l-4 border-red-500 dark:border-red-700 text-red-900 dark:text-red-100 hover:bg-red-200 dark:hover:bg-red-800
+                {% endif %}
+                ">
+                <svg
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    class="h-5 w-5 flex-shrink-0 mr-2
+                    {% if message.tags == 'success' %}
+                        text-green-600
+                    {% elif message.tags == 'info' %}
+                        text-blue-600
+                    {% elif message.tags == 'warning' %}
+                        text-yellow-600
+                    {% elif message.tags == 'error' %}
+                        text-red-600
+                    {% endif %}
+                    "
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                        stroke-width="2"
+                        stroke-linejoin="round"
+                        stroke-linecap="round"
+                    ></path>
+                </svg>
+                <p class="text-xs font-semibold">{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %} 
     <div
       class="flex h-screen bg-gray-50 dark:bg-gray-900"
       :class="{ 'overflow-hidden': isSideMenuOpen }"
@@ -550,7 +594,7 @@
                     d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                   ></path>
                 </svg>
-                <span>Hello {{ user.username }}, Kindly note that it might take upto 24hrs to response to your request</span>
+                <span>Hello {{ user.username }}, kindly note that it might take upto 24hrs to response to your request</span>
               </div>
               
             </a>
@@ -571,12 +615,12 @@
                   <p
                     class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400"
                   >
-                    Total Kilo
+                    Total weigth
                   </p>
                   <p
                     class="text-lg font-semibold text-gray-700 dark:text-gray-200"
                   >
-                    {{ total_points }} Kg
+                    {{ total_weight }} Kg
                   </p>
                 </div>
               </div>
@@ -595,12 +639,12 @@
                   <p
                     class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400"
                   >
-                    Available for Withdrawal
+                    Total earning
                   </p>
                   <p
                     class="text-lg font-semibold text-gray-700 dark:text-gray-200"
                   >
-                    # {{ total_fund }}
+                    <img src="{% static 'recycling/images/naira.png' %}" style="display: inline;" /> {{ total_earned  }}
                   </p>
                 </div>
               </div>
@@ -619,12 +663,12 @@
                   <p
                     class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400"
                   >
-                    Total Withdraw
+                    Available for Withdrawal
                   </p>
                   <p
                     class="text-lg font-semibold text-gray-700 dark:text-gray-200"
                   >
-                    # {{ withdrawn }}
+                    <img src="{% static 'recycling/images/naira.png' %}" style="display: inline;" /> {{ available_fund  }}
                   </p>
                 </div>
               </div>
@@ -643,12 +687,12 @@
                   <p
                     class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400"
                   >
-                    Total Fund
+                    Total Withdrawan
                   </p>
                   <p
                     class="text-lg font-semibold text-gray-700 dark:text-gray-200"
                   >
-                    # {{ fund }}
+                    <img src="{% static 'recycling/images/naira.png' %}" style="display: inline;" /> {{ withdrawn_fund  }}
                   </p>
                 </div>
               </div>
@@ -663,7 +707,7 @@
                       class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800"
                     >
                       <th class="px-4 py-3">user</th>
-                      <th class="px-4 py-3">point</th>
+                      <th class="px-4 py-3">waste / Withdraw Type</th>
                       <th class="px-4 py-3">Status</th>
                       <th class="px-4 py-3">Date</th>
                     </tr>
@@ -671,8 +715,9 @@
                   <tbody
                     class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"
                   >
-                  {% for trash in all_trash %}
-                    <tr class="text-gray-700 dark:text-gray-400">
+                  {% for request in all_requests %}
+                    {% if request.trash_types %}
+                      <tr class="text-gray-700 dark:text-gray-400">
                       <td class="px-4 py-3">
                         <div class="flex items-center text-sm">
                           <!-- Avatar with inset shadow -->
@@ -690,33 +735,93 @@
                           <div>
                             <p class="font-semibold">{{ user.username }}</p>
                             <p class="text-xs text-gray-600 dark:text-gray-400">
-                              A request By you
+                              A waste request by you
                             </p>
                           </div>
                         </div>
                       </td>
                       <td class="px-4 py-3 text-sm">
-                        {{ trash.trash_type}}
+                        {{ request.trash_types}}
                       </td>
                       <td class="px-4 py-3 text-xs">
-                        {% if trash.finished == False %}
+                        {% if request.finished == True and request.seen == True %}
                         <span
-                          class="px-2 py-1 font-semibold leading-tight text-gray-700 bg-gray-100 rounded-full dark:text-gray-100 dark:bg-gray-700"
+                        class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
                         >
-                          Pending 
+                          successful 
+                        </span>
+                        {% elif request.seen == True %}
+                        <span
+                          class="px-2 py-1 font-semibold leading-tight text-orange-700 bg-orange-100 rounded-full dark:text-white dark:bg-orange-600"
+                        >
+                          Processing
                         </span>
                         {% else %}
                         <span
-                          class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
+                           class="px-2 py-1 font-semibold leading-tight text-gray-700 bg-gray-100 rounded-full dark:text-gray-100 dark:bg-gray-700"
                         >
-                          Approved
+                          pending
                         </span>
                         {% endif%}
                       </td>
                       <td class="px-4 py-3 text-sm">
-                        {{trash.request_date}}
+                        {{request.request_date|timesince}} ago
                       </td>
                     </tr>
+                    {% else %}
+                      <tr class="text-gray-700 dark:text-gray-400">
+                      <td class="px-4 py-3">
+                        <div class="flex items-center text-sm">
+                          <!-- Avatar with inset shadow -->
+                          <div
+                            class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
+                          >
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-fill w-full h-full rounded-full" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                              </svg>
+                            <div
+                              class="absolute inset-0 rounded-full shadow-inner"
+                              aria-hidden="true"
+                            ></div>
+                          </div>
+                          <div>
+                            <p class="font-semibold">{{ user.username }}</p>
+                            <p class="text-xs text-gray-600 dark:text-gray-400">
+                              A earning request by you
+                            </p>
+                          </div>
+                        </div>
+                      </td>
+                      <td class="px-4 py-3 text-sm">
+                        {{ request.withdraw_type}} - {{ request.amount}} Naira only.
+                      </td>
+                      <td class="px-4 py-3 text-xs">
+                        {% if request.finished == True and request.seen == True %}
+                        <span
+                        class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
+                        >
+                          successful 
+                        </span>
+                        {% elif request.seen == True %}
+                        <span
+                          class="px-2 py-1 font-semibold leading-tight text-orange-700 bg-orange-100 rounded-full dark:text-white dark:bg-orange-600"
+                        >
+                          Processing
+                        </span>
+                        {% else %}
+                        <span
+                           class="px-2 py-1 font-semibold leading-tight text-gray-700 bg-gray-100 rounded-full dark:text-gray-100 dark:bg-gray-700"
+                        >
+                          pending
+                        </span>
+                        {% endif%}
+                      </td>
+                      <td class="px-4 py-3 text-sm">
+                        {{request.request_date|timesince}} ago
+                      </td>
+                    </tr>
+                    {% endif %}
+                    
                   {% endfor%}
                   </tbody>
                 </table>
