--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -59,7 +59,7 @@
 							Don’t have an account?
 						</span>
 
-						<a href="#" class="txt3">
+						<a href="{% url "register" %}" class="txt3">
 							Sign up now
 						</a>
 					</div>
